--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "zachyingling:027d49c804628c1d40fba03c6aac11e650290491@github.com/zachyingling/react-clickygame"
+    "url": "https://github.com/zachyingling/react-clickygame"
   },
   "keywords": [],
   "author": "",
