--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run install && npm run build && npm run client",
     "client": "cd application && npm run start",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
+    "install": "cd application && npm install",
+    "build": "cd application && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
